[fix] force cta buttons in one line
There was a line-break on long CTA buttons with borders, which visually was not really good.

--- a/app/assets/stylesheets/redesign/base/_buttons.scss
+++ b/app/assets/stylesheets/redesign/base/_buttons.scss
@@ -294,6 +294,9 @@
   padding: 10px 22px;
   display: inline-block;
   border-radius: 0;
+  white-space: nowrap;
+  word-wrap: break-word;
+  word-break: normal;
 
   &.white-txt-border {
     color: $c-neutral-white;
